fix: z-index to 2

--- a/src/styles/navigation/navbar/navbar.scss
+++ b/src/styles/navigation/navbar/navbar.scss
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap);
 .navbar-container-trans, .navbar-container-white{
-    z-index: 99;
+    z-index: 2;
 }
 
 
